package edu.fiuba.algo3.modelo.Edificios;

public class EnConstruccion {
}
