package edu.fiuba.algo3.modelo.vida;

public interface Vida {
    public int getVida();

    public void aplicarDanio(int danioHecho);

    public void accionDeTurno();
}
